--- a/MicrowaveOvenClasses/packages.config
+++ b/MicrowaveOvenClasses/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.CodeQuality.Analyzers" version="2.9.8" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NetCore.Analyzers" version="2.9.8" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NetFramework.Analyzers" version="2.9.8" targetFramework="net461" developmentDependency="true" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
 </packages>
